fixed margin spacing

--- a/css/styles.css
+++ b/css/styles.css
@@ -951,4 +951,5 @@ h1 {
     display: flex;
     justify-content: center;
     align-items: center;
+    margin-bottom: 0px;
 }
